# ModalAnalysis

./: .gitignore  CMakeLists.txt  main.cpp  readme.txt  run.py  run.sh
cmake_modules/: Findglm.cmake
doc/: modal_analysis.tex
