PROJECT(tempt)

# print log informations
ADD_DEFINITIONS(-DLOG_INFO)
ADD_DEFINITIONS(-DLOG_ERROR)
ADD_DEFINITIONS(-DLOG_WARN)
ADD_DEFINITIONS(-DLOG_DEBUG)
ADD_DEFINITIONS(-DLOG_TRACE)
ADD_DEFINITIONS(-DUSE_FUNC_TIMER)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

SET(CMAKE_CXX_FLAGS "-std=c++0x -o3 -fpermissive ${CMAKE_CXX_FLAGS}")

SET(Boost_USE_STATIC_LIBS        ON)
SET(Boost_USE_MULTITHREADED      ON)
SET(Boost_USE_STATIC_RUNTIME    OFF)
FIND_PACKAGE( Boost COMPONENTS filesystem system REQUIRED)

INCLUDE_DIRECTORIES(
  
  /usr/local/include/utility
  /usr/local/include
  )

SET(APPNAME modal_analysis)

AUX_SOURCE_DIRECTORY(. src)

ADD_EXECUTABLE(${APPNAME} 

  ${src}
)

TARGET_LINK_LIBRARIES( ${APPNAME}
  
  ${Boost_LIBRARIES}
  )