PROJECT(tempt)

# print log informations
ADD_DEFINITIONS(-DLOG_INFO)
ADD_DEFINITIONS(-DLOG_ERROR)
ADD_DEFINITIONS(-DLOG_WARN)
ADD_DEFINITIONS(-DLOG_DEBUG)
ADD_DEFINITIONS(-DLOG_TRACE)
ADD_DEFINITIONS(-DUSE_FUNC_TIMER)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET( CMAKE_MODULE_PATH
  "${PROJECT_SOURCE_DIR}/cmake_modules/;${CMAKE_MODULE_PATH}" )

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

SET(CMAKE_CXX_FLAGS "-std=c++0x -o3 -fpermissive ${CMAKE_CXX_FLAGS}")

SET(Boost_USE_STATIC_LIBS        ON)
SET(Boost_USE_MULTITHREADED      ON)
SET(Boost_USE_STATIC_RUNTIME    OFF)
FIND_PACKAGE( Boost COMPONENTS filesystem system REQUIRED)


SET(BLA_VENDOR "Goto")
FIND_PACKAGE(BlasLapack)

IF(NOT LAPACK_FOUND)
  SET(BLA_VENDOR "OpenBlas")
  FIND_PACKAGE(BlasLapack)
ENDIF(NOT LAPACK_FOUND)
IF(NOT LAPACK_FOUND)
  SET(BLA_VENDOR "Generic")
  FIND_PACKAGE(BlasLapack)
ENDIF(NOT LAPACK_FOUND)

FIND_PACKAGE(SuperLU2.0 REQUIRED)
FIND_PACKAGE(Arpack REQUIRED)
FIND_PACKAGE(Arpack++ REQUIRED)
IF(Arpack++_FOUND)
  INCLUDE_DIRECTORIES(${ARPACK++_INCLUDE_DIR})
ENDIF(Arpack++_FOUND)

INCLUDE_DIRECTORIES(

  /usr/local/include/utility
  /usr/local/include
  )

SET(APPNAME modal_analysis)

AUX_SOURCE_DIRECTORY(. src)

ADD_EXECUTABLE(${APPNAME} 

  ${src}
)

TARGET_LINK_LIBRARIES( ${APPNAME}
  
  /usr/local/lib/libutility_math.a
  /usr/local/lib/libutility_common.a
  /usr/local/lib/libutility_elastic.a
  ${ARPACK_LIBRARIES}
  ${SUPERLU2.0_LIBRARIES}
  
  ${SUITESPARSE_LIBRARIES}
  ${SUITESPARSE_SPQR_LIBRARY}
  ${ALGLIB_LIBRARIES}
  ${CASADI_LIBRARIES}
  ${IPOPT_LIBRARIES}
  ${LAPACK_LIBRARIES}

  ${Boost_LIBRARIES}
  )